# NitroSAT

./: AGENTS.md  ANNOUNCEMENT.md  BENCHMARKS.md  BUSINESS_USE_CASES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  ConditionalAsymptoticLock.lean  MATH.md  NitroSATProofs.lean  README.md  SEO.md  index.html  nitrosat.c  nitrosat.lua  pyproject.toml  run_cnf.lua  timetable_output.json
.github/: FUNDING.yml
.github/workflows/: v3-tutorials.yml
benchmarks/: BENCHMARKS.md  README.md  RESULTS.md  full_benchmark_results.csv  run_nitrosat_bench.py
benchmarks/generators/: analyze_unsat.py  gen_auction.py  gen_factoring.py  gen_hard_list_color.py  gen_hospital_schedule.py  parse_factors.py  verify_auction.py
docs/: INDEX.md  TUTORIAL_SUDOKU_AND_WORKFORCE_V3.md
docs/tutorials/: README.md  exam-scheduling.md  graph-coloring.md  kubernetes-pod-placement.md  meeting-room-scheduling.md  nurse-rostering.md  product-configuration.md  university-timetabling.md  v3-usage.md  vehicle-assignment.md
examples/v3/: sudoku.py  tutorial_models.py  workforce.py
src/c/: Makefile
src/c/v2/: nitrosatv2.c
src/c/v3/: README.md  cdcl_internal.h  nitrosatv3.c
tests/v3/: base.cnf  contradiction.cnf  hard_conflict.wcnf  hard_marker.wcnf  increment.cnf  malformed.cnf  malformed.wcnf  test_exact.py  test_tutorials.sh  test_v3.sh  test_wcnf_finisher.py  weighted.wcnf  weighted_increment.wcnf
