[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrosat"
version = "0.1.0"
description = "Advanced MaxSAT Solver with Heat Kernel Smoothing and BAHA"
authors = [
    {name = "Sethu Iyer", email = "sethuiyer95@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["sat-solver", "maxsat", "optimization", "physics-inspired"]

[project.urls]
"Homepage" = "https://github.com/sethuiyer/NitroSAT"
"Bug Tracker" = "https://github.com/sethuiyer/NitroSAT/issues"
